Agregados los cambios para la gestion de las rutas de equipos y jugadores
